Will photo cropped and new Will added

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "A fun reminder of your Codesmith obligations",
   "version": "1.0",
   "permissions": [
-    "activeTab"
+    "tabs","<all_urls"
   ],
   "action": {
     "default_popup": "hello.html",
@@ -19,7 +19,7 @@
     }
   ],
   "web_accessible_resources":[{
-    "resources":["images/Will.png"],
+    "resources":["images/Will.png","images/newWill.jpg"],
     "matches":["<all_urls>"]
   }]
 }
